--- a/ContentBlazorChromiumExtension/ContentBlazorChromiumExtension.csproj
+++ b/ContentBlazorChromiumExtension/ContentBlazorChromiumExtension.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <BlazorEnableCompression>false</BlazorEnableCompression>
+    <BlazorCacheBootResources>false</BlazorCacheBootResources>
   </PropertyGroup>
 
   <ItemGroup>
